fix: custom scrollbar color

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,7 +28,7 @@
 }
 
 html {
-  scrollbar-color: var(--code-primary-color) transparent;
+  scrollbar-color: var(--primary-color) transparent;
   scrollbar-width: thin;
   box-sizing: border-box;
 }
